--- a/shibboleth.html
+++ b/shibboleth.html
@@ -92,7 +92,7 @@ $ shibd -t
     <p>Aprire<br><code><a href="https://localhost/Shibboleth.sso/Status">https://localhost/<mark>Shibboleth.sso/Status</mark></a></code></p>
     </section>
 	
-	<section id="config"><h2>metadata del SP</h2>
+	<section id="config"><h2>Metadata del SP</h2>
 	
 	<pre>shibboleth.xml<code data-noescape>
 &lt;ApplicationDefaults entityID="<mark>https://corso-sp/</mark>"
@@ -106,7 +106,7 @@ $ shibd -t
 	</aside>	
 	</section>
 	
-	<section><h2>IdP metadata</h2>
+	<section><h2>Metadata IdP</h2>
 	
 <pre>mio-idp-metadata.xml<code data-trim data-noescape>
 &lt;?xml version="1.0"?&gt;
