federazione con SSP

--- a/shibboleth.html
+++ b/shibboleth.html
@@ -320,7 +320,7 @@ decommentate quel che serve
     </section>	
 
     <section><h2>Virtual host</h2>
-        <p>Se virutal host diversi devono avere configurazioni differenti (es. entityId)</p>
+        <p>Virtual host diversi possono avere configurazioni specifiche (es. entityId)</p>
 <pre>shibboleth.xml<code data-trim data-noescape>
 &lt;ApplicationDefaults entityID="https://corso-sp.example/shibboleth"
     ...
@@ -376,8 +376,8 @@ I confronti vengono fatti per stringhe (string-matching):
 - switch per confronto case-insensitive
 - le sintassi LDAP non vengono applicate (es. sui DN sui gruppi)
 
-	<table class="biblio" style="font-size: small"><tr><td>Riferimenti</td><td><a href="https://wiki.shibboleth.net/confluence/display/SHIB2/NativeSPhtaccess">https://wiki.shibboleth.net/confluence/display/SHIB2/NativeSPhtaccess</a>
-		</td></tr></table>	
+<table class="biblio" style="font-size: small"><tr><td>Riferimenti</td><td><a href="https://wiki.shibboleth.net/confluence/display/SHIB2/NativeSPhtaccess">https://wiki.shibboleth.net/confluence/display/SHIB2/NativeSPhtaccess</a>
+        </td></tr></table>	
 
 	<aside class="notes">
 	</aside>
