--- a/index.html
+++ b/index.html
@@ -1,29 +1,29 @@
 <!doctype html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>Corso SP 2017</title>
-		<meta name="author" value="Marco Ferrante, marco@csita.unige.it">
+        <title>Corso SP 2017</title>
+        <meta name="author" value="Marco Ferrante, marco@csita.unige.it">
 
-		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/white.css">
+        <link rel="stylesheet" href="css/reveal.css">
+        <link rel="stylesheet" href="css/theme/white.css">
 
-		<!-- Theme used for syntax highlighting of code -->
-		<link rel="stylesheet" href="lib/css/zenburn.css">
+        <!-- Theme used for syntax highlighting of code -->
+        <link rel="stylesheet" href="lib/css/zenburn.css">
 
-		<!-- Printing and PDF exports -->
-		<script>
-			var link = document.createElement( 'link' );
-			link.rel = 'stylesheet';
-			link.type = 'text/css';
-			link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
-			document.getElementsByTagName( 'head' )[0].appendChild( link );
-		</script>
-	</head>
-	<body>
-	<!--
+        <!-- Printing and PDF exports -->
+        <script>
+            var link = document.createElement( 'link' );
+            link.rel = 'stylesheet';
+            link.type = 'text/css';
+            link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
+            document.getElementsByTagName( 'head' )[0].appendChild( link );
+        </script>
+    </head>
+    <body>
+    <!--
 Cosa vi serve:
 - Mozilla Firefox (va bene anche Google Chrome, ma gli esempi fanno riferimento a FF)
 - PHP
@@ -37,8 +37,8 @@ dev'essere attivo e disponibile SSL/https
 <div class="reveal"><div class="slides">
 
 <section><h1>Sviluppo di servizi SSO SAML 2.0</h1>
-<p>Marco Ferrante (Università di Genova)</p>
-<p>Giuliano Latini (Università Politecnica delle Marche)</p>
+    <p>Marco Ferrante marco.ferrante@unige.it<br /><small>Università degli Studi di Genova</small></p>
+<p>Giuliano Latini giuliano.latini@univpm.it<br /><small>Università Politecnica delle Marche</small></p>
 <p>membri CTS GARR IDEM</p>
 	<aside class="notes">
 Ringraziamenti: Davide Vaghetti (UniPi)
@@ -97,7 +97,7 @@ I cookie vengono trasmessi solo al dominio specificato nell’attributo domain, 
 	SimpleSAMLphp, Microsoft ADFS, OneLogin, Google,
 	<a href="https://dev.entrouvert.org/projects/authentic" title="IdP e SP, basato su Python, francese">Authentic 2</a>,
 	<a href="http://www.josso.org" title="IdP e SP e librerie, commerciale e community">JOSSO</a>,
-	PingFederate</p>
+	PingFederate, ecc...</p>
 	<p>Tratteremo solo SAML 2.0</p>
 
 	<table class="biblio" style="font-size: small"><tr><td>Riferimenti</td><td><a href="https://en.wikipedia.org/wiki/SAML-based_products_and_services">https://en.wikipedia.org/wiki/SAML-based_products_and_services</a>
