--- a/ssp.html
+++ b/ssp.html
@@ -271,10 +271,12 @@ codice (es. inclusione di file esterni)</p>
 <pre><code data-trim data-noescape>
 $ cd /var/simplesamlphp
 $ touch modules/metarefresh/enable
-$ modules/metarefresh/bin/metarefresh.php http://www.garr.it/idem-metadata/idem-metadata-sha256.xml
+$ modules/metarefresh/bin/metarefresh.php&#8617;
+  http://www.garr.it/idem-metadata/idem-metadata-sha256.xml
 </code></pre>
 
-<p>I metadata si troveranno in <code title="modificabile con l'opzione -o">/var/simplesamlphp/metadata-generated</code></p>
+<p>I metadata si troveranno in<br />
+    <code title="modificabile con l'opzione -o">/var/simplesamlphp/metadata-generated</code></p>
 
 <table class="biblio" style="font-size: small"><tr><td>Riferimenti</td>
 <td><a href="https://simplesamlphp.org/docs/1.14/simplesamlphp-automated_metadata">https://simplesamlphp.org/docs/1.14/simplesamlphp-automated_metadata</a>
