--- a/shibboleth.html
+++ b/shibboleth.html
@@ -31,9 +31,14 @@
 	<section><h1>Shibboleth SP</h1>
 	</section>
 	
-	<section><h2>Ubuntu</h2>
-	<p>Installazione</p>
-	<pre><code data-trim>
+    <section><h2>Panoramica</h2>
+        <p>Disponibile sia come modulo per Apache sia per Microsoft Windows
+            server+IIS</p>
+        <p>Sviluppata in Java+codice nativo</p>
+    </section>
+
+	<section><h2>Installazione</h2>
+	<pre>sistemi Debian/Ubuntu<code data-trim>
 $ apt-get install libapache2-mod-shib2
 $ shib-keygen
 	</code></pre>
