Altro su shibboleth

--- a/ssp.html
+++ b/ssp.html
@@ -31,6 +31,7 @@
 
 
     <section><h2>Panoramica</h2>
+        <p>Sviluppato dalla REN Norvegese UNINETT</p>
         <p>SimpleSAMLphp (SSP) è una libreria di autenticazione multistandard
             (SAML, LDAP, RADIUS, CAS, ADFS, InfoCard, YubiKey, Facebook,
             Twitter, X.509, OpenID, db SQL, ecc...)
