Corretto reference per Vaghetti

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ dev'essere attivo e disponibile SSL/https
         <p><small>23 ottobre 2017 - Roma</small></p>
         <p>Marco Ferrante marco.ferrante@unige.it<br /><small>Università di Genova/CTS IDEM GARR</small><br />
         Giuliano Latini giuliano.latini@univpm.it<br /><small>Università Politecnica delle Marche/CTS IDEM GARR</small><br />
-        Davide Vaghetti davide.vaghetti@unipi.it<br /><small>Università di Pisa/Coordinatore CTS IDEM GARR</small></p>
+        Davide Vaghetti davide.vaghetti@garr.it<br /><small>Consortium GARR/Coordinatore CTS IDEM GARR</small></p>
     </section>
 
     <section><h2>Organizzazione del corso</h2>
