--- a/shibboleth.html
+++ b/shibboleth.html
@@ -522,6 +522,9 @@ Require shib-attr affiliation ~ ^(staff|student)@garr\.it$
 
     <table class="biblio" style="font-size: small"><tr><td>Riferimenti</td>
 <td><a href="https://wiki.shibboleth.net/confluence/display/SHIB2/NativeSPhtaccessl">https://wiki.shibboleth.net/confluence/display/SHIB2/NativeSPhtaccess</a>
+</td></tr>
+    <tr><td></td>
+<td><a href="https://www.switch.ch/aai/guides/sp/access-rules/">SWITCH Shibboleth Service Provider Access Contro</a>
 </td></tr></table>        
     </section>
                 
